package doss.net;

option java_outer_classname = "DossProtocol";

message Request {
	optional StatRequest statRequest = 2;
}

message StatRequest {
    required int64 blobId = 1;
}

message Response {
    optional StatResponse statResponse = 2;    
    optional NoSuchBlobResponse noSuchBlobResponse = 16;
}

message StatResponse {
	required int64 blobId = 1;
	required int64 size = 2;
}

message NoSuchBlobResponse {
	required int64 blobId = 1;
}
